--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
     <nav class="navbar">
 		<img src="Samcss.png" alt="" width="60" height="60">
-        <h1>SamCSS V.1.1</h1>
+        <h1>SamCSS V.1.2</h1>
         <a href="samcss.js" download="samcss.js"><button class="download">Download JS</button></a>
     </nav><br><br>
 	<div class="main">
@@ -84,227 +84,226 @@
 	</div>
 	<br><br>
     <div class="classes">
-        
         w- -- width<br><br>
-h- -- height<br><br>
-minw- -- minWidth<br><br>
-maxw- -- maxWidth<br><br>
-minh- -- minHeight<br><br>
-maxh- -- maxHeight<br><br>
-p- -- padding<br><br>
-pt- -- paddingTop<br><br>
-pr- -- paddingRight<br><br>
-pb- -- paddingBottom<br><br>
-pl- -- paddingLeft<br><br>
-bw- -- borderWidth<br><br>
-bs- -- borderStyle<br><br>
-bc- -- borderColor<br><br>
-br- -- borderRadius<br><br>
-m- -- margin<br><br>
-mt- -- marginTop<br><br>
-mr- -- marginRight<br><br>
-mb- -- marginBottom<br><br>
-ml- -- marginLeft<br><br>
-boxs- -- boxSizing<br><br>
-olw- -- outlineWidth<br><br>
-ols- -- outlineStyle<br><br>
-olc- -- outlineColor<br><br>
-olo- -- outlineOffset<br><br>
-d- -- display<br><br>
-fd- -- flexDirection<br><br>
-fw- -- flexWrap<br><br>
-jc- -- justifyContent<br><br>
-ai- -- alignItems<br><br>
-ac- -- alignContent<br><br>
-gap- -- gap<br><br>
-order- -- order<br><br>
-fg- -- flexGrow<br><br>
-fs- -- flexShrink<br><br>
-fb- -- flexBasis<br><br>
-as- -- alignSelf<br><br>
-ff- -- fontFamily<br><br>
-fz- -- fontSize<br><br>
-fweight- -- fontWeight<br><br>
-fstyle- -- fontStyle<br><br>
-lh- -- lineHeight<br><br>
-ls- -- letterSpacing<br><br>
-ws- -- wordSpacing<br><br>
-ta- -- textAlign<br><br>
-td- -- textDecoration<br><br>
-tt- -- textTransform<br><br>
-ti- -- textIndent<br><br>
-ts- -- textShadow<br><br>
-ws- -- whiteSpace<br><br>
-ow- -- overflowWrap<br><br>
-dir- -- direction<br><br>
-ub- -- unicodeBidi<br><br>
-pos- -- position<br><br>
-top- -- top<br><br>
-right- -- right<br><br>
-bottom- -- bottom<br><br>
-left- -- left<br><br>
-zi- -- zIndex<br><br>
-bgc- -- backgroundColor<br><br>
-bgi- -- backgroundImage<br><br>
-bgr- -- backgroundRepeat<br><br>
-bgp- -- backgroundPosition<br><br>
-bgs- -- backgroundSize<br><br>
-bgo- -- backgroundOrigin<br><br>
-bgcl- -- backgroundClip<br><br>
-bga- -- backgroundAttachment<br><br>
-bgbl- -- backgroundBlendMode<br><br>
-c- -- color<br><br>
-trans- -- transform<br><br>
-to- -- transformOrigin<br><br>
-ts- -- transformStyle<br><br>
-per- -- perspective<br><br>
-pero- -- perspectiveOrigin<br><br>
-tran- -- transition<br><br>
-tp- -- transitionProperty<br><br>
-tdur- -- transitionDuration<br><br>
-ttf- -- transitionTimingFunction<br><br>
-tdel- -- transitionDelay<br><br>
-anim- -- animation<br><br>
-aname- -- animationName<br><br>
-adur- -- animationDuration<br><br>
-atf- -- animationTimingFunction<br><br>
-adel- -- animationDelay<br><br>
-aic- -- animationIterationCount<br><br>
-adir- -- animationDirection<br><br>
-afm- -- animationFillMode<br><br>
-aps- -- animationPlayState<br><br>
-maski- -- maskImage<br><br>
-maskm- -- maskMode<br><br>
-maskr- -- maskRepeat<br><br>
-maskpos- -- maskPosition<br><br>
-masks- -- maskSize<br><br>
-masko- -- maskOrigin<br><br>
-maskcl- -- maskClip<br><br>
-maskcomp- -- maskComposite<br><br>
-maskb- -- maskBorder<br><br>
-clip-p- -- clip-path<br><br>
-filt- -- filter<br><br>
-gtrows- -- gridTemplateRows<br><br>
-gtcols- -- gridTemplateColumns<br><br>
-gtareas- -- gridTemplateAreas<br><br>
-gtemp- -- gridTemplate<br><br>
-growgap- -- gridRowGap<br><br>
-gcolgap- -- gridColumnGap<br><br>
-ggap- -- gridGap<br><br>
-garows- -- gridAutoRows<br><br>
-gacols- -- gridAutoColumns<br><br>
-gaflow- -- gridAutoFlow<br><br>
-ji- -- justifyItems<br><br>
-ali- -- alignItems<br><br>
-pi- -- placeItems<br><br>
-jc- -- justifyContent<br><br>
-ac- -- alignContent<br><br>
-pc- -- placeContent<br><br>
-grstart- -- gridRowStart<br><br>
-grend- -- gridRowEnd<br><br>
-grow- -- gridRow<br><br>
-gcstart- -- gridColumnStart<br><br>
-gcend- -- gridColumnEnd<br><br>
-gcol- -- gridColumn<br><br>
-garea- -- gridArea<br><br>
-js- -- justifySelf<br><br>
-als- -- alignSelf<br><br>
-ps- -- placeSelf<br><br>
-curs- -- cursor<br><br>
-pe- -- pointerEvents<br><br>
-res- -- resize<br><br>
-us- -- userSelect<br><br>
-app- -- appearance<br><br>
-cont- -- content<br><br>
-cc- -- caretColor<br><br>
-sb- -- scrollBehavior<br><br>
-sst- -- scrollSnapType<br><br>
-ssa- -- scrollSnapAlign<br><br>
-bc- -- borderCollapse<br><br>
-bs- -- borderSpacing<br><br>
-cs- -- captionSide<br><br>
-ec- -- emptyCells<br><br>
-tl- -- tableLayout<br><br>
-ls- -- listStyle<br><br>
-lst- -- listStyleType<br><br>
-lsp- -- listStylePosition<br><br>
-lsi- -- listStyleImage<br><br>
-ov- -- overflow<br><br>
-ovx- -- overflowX<br><br>
-ovy- -- overflowY<br><br>
-to- -- textOverflow<br><br>
-vis- -- visibility<br><br>
-wm- -- writingMode<br><br>
-tor- -- textOrientation<br><br>
-dir- -- direction<br><br>
-ub- -- unicodeBidi<br><br>
-bb- -- breakBefore<br><br>
-ba- -- breakAfter<br><br>
-bi- -- breakInside<br><br>
-orph- -- orphans<br><br>
-wid- -- widows<br><br>
-ffs- -- fontFeatureSettings<br><br>
-fvl- -- fontVariantLigatures<br><br>
-fvc- -- fontVariantCaps<br><br>
-fvn- -- fontVariantNumeric<br><br>
-fvea- -- fontVariantEastAsian<br><br>
-fva- -- fontVariantAlternates<br><br>
-fk- -- fontKerning<br><br>
-fos- -- fontOpticalSizing<br><br>
-iv- -- initialValue<br><br>
-all- -- all<br><br>
-ssstop- -- scroll-snap-stop<br><br>
-scrb- -- scroll-behavior<br><br>
-vtn- -- view-transition-name<br><br>
-cont- -- contain<br><br>
-wc- -- will-change<br><br>
-il- -- initial-letter<br><br>
-tdl- -- text-decoration-line<br><br>
-tds- -- text-decoration-style<br><br>
-tdc- -- text-decoration-color<br><br>
-tuo- -- text-underline-offset<br><br>
-tup- -- text-underline-position<br><br>
-hyp- -- hyphens<br><br>
-iso- -- isolation<br><br>
-mbm- -- mix-blend-mode<br><br>
-of- -- object-fit<br><br>
-op- -- object-position<br><br>
-oa- -- offset-anchor<br><br>
-od- -- offset-distance<br><br>
-opath- -- offset-path<br><br>
-orot- -- offset-rotate<br><br>
-ob- -- overscroll-behavior<br><br>
-pba- -- page-break-after<br><br>
-pbb- -- page-break-before<br><br>
-pbi- -- page-break-inside<br><br>
-quot- -- quotes<br><br>
-ra- -- ruby-align<br><br>
-rp- -- ruby-position<br><br>
-sit- -- shape-image-threshold<br><br>
-sm- -- shape-margin<br><br>
-so- -- shape-outside<br><br>
-tsize- -- tab-size<br><br>
-tcu- -- text-combine-upright<br><br>
-tem- -- text-emphasis<br><br>
-tec- -- text-emphasis-color<br><br>
-tep- -- text-emphasis-position<br><br>
-tes- -- text-emphasis-style<br><br>
-tren- -- text-rendering<br><br>
-tsa- -- text-size-adjust<br><br>
-ur- -- unicode-range<br><br>
-va- -- vertical-align<br><br>
-wb- -- word-break<br><br>
-clip-p- -- clip-path<br><br>
-maski- -- mask-image<br><br>
-maskm- -- mask-mode<br><br>
-maskr- -- mask-repeat<br><br>
-maskpos- -- mask-position<br><br>
-masks- -- mask-size<br><br>
-masko- -- mask-origin<br><br>
-maskcl- -- mask-clip<br><br>
-maskcomp- -- mask-composite<br><br>
-maskb- -- mask-border<br><br>
-filt- -- filter<br><br>
+        h- -- height<br><br>
+        minw- -- min-width<br><br>
+        maxw- -- max-width<br><br>
+        minh- -- min-height<br><br>
+        maxh- -- max-height<br><br>
+        p- -- padding<br><br>
+        pt- -- padding-top<br><br>
+        pr- -- padding-right<br><br>
+        pb- -- padding-bottom<br><br>
+        pl- -- padding-left<br><br>
+        bw- -- border-width<br><br>
+        bs- -- border-style<br><br>
+        bc- -- border-color<br><br>
+        br- -- border-radius<br><br>
+        m- -- margin<br><br>
+        mt- -- margin-top<br><br>
+        mr- -- margin-right<br><br>
+        mb- -- margin-bottom<br><br>
+        ml- -- margin-left<br><br>
+        boxs- -- box-sizing<br><br>
+        olw- -- outline-width<br><br>
+        ols- -- outline-style<br><br>
+        olc- -- outline-color<br><br>
+        olo- -- outline-offset<br><br>
+        d- -- display<br><br>
+        fd- -- flex-direction<br><br>
+        fw- -- flex-wrap<br><br>
+        jc- -- justify-content<br><br>
+        ai- -- align-items<br><br>
+        ac- -- align-content<br><br>
+        gap- -- gap<br><br>
+        order- -- order<br><br>
+        fg- -- flex-grow<br><br>
+        fs- -- flex-shrink<br><br>
+        fb- -- flex-basis<br><br>
+        as- -- align-self<br><br>
+        ff- -- font-family<br><br>
+        fz- -- font-size<br><br>
+        fweight- -- font-weight<br><br>
+        fstyle- -- font-style<br><br>
+        lh- -- line-height<br><br>
+        ls- -- letter-spacing<br><br>
+        ws- -- word-spacing<br><br>
+        ta- -- text-align<br><br>
+        td- -- text-decoration<br><br>
+        tt- -- text-transform<br><br>
+        ti- -- text-indent<br><br>
+        ts- -- text-shadow<br><br>
+        ws- -- white-space<br><br>
+        ow- -- overflow-wrap<br><br>
+        dir- -- direction<br><br>
+        ub- -- unicode-bidi<br><br>
+        pos- -- position<br><br>
+        top- -- top<br><br>
+        right- -- right<br><br>
+        bottom- -- bottom<br><br>
+        left- -- left<br><br>
+        zi- -- z-index<br><br>
+        bgc- -- background-color<br><br>
+        bgi- -- background-image<br><br>
+        bgr- -- background-repeat<br><br>
+        bgp- -- background-position<br><br>
+        bgs- -- background-size<br><br>
+        bgo- -- background-origin<br><br>
+        bgcl- -- background-clip<br><br>
+        bga- -- background-attachment<br><br>
+        bgbl- -- background-blend-mode<br><br>
+        c- -- color<br><br>
+        trans- -- transform<br><br>
+        to- -- transform-origin<br><br>
+        ts- -- transform-style<br><br>
+        per- -- perspective<br><br>
+        pero- -- perspective-origin<br><br>
+        tran- -- transition<br><br>
+        tp- -- transition-property<br><br>
+        tdur- -- transition-duration<br><br>
+        ttf- -- transition-timing-function<br><br>
+        tdel- -- transition-delay<br><br>
+        anim- -- animation<br><br>
+        aname- -- animation-name<br><br>
+        adur- -- animation-duration<br><br>
+        atf- -- animation-timing-function<br><br>
+        adel- -- animation-delay<br><br>
+        aic- -- animation-iteration-count<br><br>
+        adir- -- animation-direction<br><br>
+        afm- -- animation-fill-mode<br><br>
+        aps- -- animation-play-state<br><br>
+        maski- -- mask-image<br><br>
+        maskm- -- mask-mode<br><br>
+        maskr- -- mask-repeat<br><br>
+        maskpos- -- mask-position<br><br>
+        masks- -- mask-size<br><br>
+        masko- -- mask-origin<br><br>
+        maskcl- -- mask-clip<br><br>
+        maskcomp- -- mask-composite<br><br>
+        maskb- -- mask-border<br><br>
+        clip-p- -- clip-path<br><br>
+        filt- -- filter<br><br>
+        gtrows- -- grid-template-rows<br><br>
+        gtcols- -- grid-template-columns<br><br>
+        gtareas- -- grid-template-areas<br><br>
+        gtemp- -- grid-template<br><br>
+        growgap- -- grid-row-gap<br><br>
+        gcolgap- -- grid-column-gap<br><br>
+        ggap- -- grid-gap<br><br>
+        garows- -- grid-auto-rows<br><br>
+        gacols- -- grid-auto-columns<br><br>
+        gaflow- -- grid-auto-flow<br><br>
+        ji- -- justify-items<br><br>
+        ali- -- align-items<br><br>
+        pi- -- place-items<br><br>
+        jc- -- justify-content<br><br>
+        ac- -- align-content<br><br>
+        pc- -- place-content<br><br>
+        grstart- -- grid-row-start<br><br>
+        grend- -- grid-row-end<br><br>
+        grow- -- grid-row<br><br>
+        gcstart- -- grid-column-start<br><br>
+        gcend- -- grid-column-end<br><br>
+        gcol- -- grid-column<br><br>
+        garea- -- grid-area<br><br>
+        js- -- justify-self<br><br>
+        als- -- align-self<br><br>
+        ps- -- place-self<br><br>
+        curs- -- cursor<br><br>
+        pe- -- pointer-events<br><br>
+        res- -- resize<br><br>
+        us- -- user-select<br><br>
+        app- -- appearance<br><br>
+        cont- -- content<br><br>
+        cc- -- caret-color<br><br>
+        sb- -- scroll-behavior<br><br>
+        sst- -- scroll-snap-type<br><br>
+        ssa- -- scroll-snap-align<br><br>
+        bc- -- border-collapse<br><br>
+        bs- -- border-spacing<br><br>
+        cs- -- caption-side<br><br>
+        ec- -- empty-cells<br><br>
+        tl- -- table-layout<br><br>
+        ls- -- list-style<br><br>
+        lst- -- list-style-type<br><br>
+        lsp- -- list-style-position<br><br>
+        lsi- -- list-style-image<br><br>
+        ov- -- overflow<br><br>
+        ovx- -- overflow-x<br><br>
+        ovy- -- overflow-y<br><br>
+        to- -- text-overflow<br><br>
+        vis- -- visibility<br><br>
+        wm- -- writing-mode<br><br>
+        tor- -- text-orientation<br><br>
+        dir- -- direction<br><br>
+        ub- -- unicode-bidi<br><br>
+        bb- -- break-before<br><br>
+        ba- -- break-after<br><br>
+        bi- -- break-inside<br><br>
+        orph- -- orphans<br><br>
+        wid- -- widows<br><br>
+        ffs- -- font-feature-settings<br><br>
+        fvl- -- font-variant-ligatures<br><br>
+        fvc- -- font-variant-caps<br><br>
+        fvn- -- font-variant-numeric<br><br>
+        fvea- -- font-variant-east-asian<br><br>
+        fva- -- font-variant-alternates<br><br>
+        fk- -- font-kerning<br><br><br>
+        fos- -- font-optical-sizing<br><br>
+        iv- -- initial-value<br><br>
+        all- -- all<br><br>
+        ssstop- -- scroll-snap-stop<br><br>
+        scrb- -- scroll-behavior<br><br>
+        vtn- -- view-transition-name<br><br>
+        cont- -- contain<br><br>
+        wc- -- will-change<br><br>
+        il- -- initial-letter<br><br>
+        tdl- -- text-decoration-line<br><br>
+        tds- -- text-decoration-style<br><br>
+        tdc- -- text-decoration-color<br><br>
+        tuo- -- text-underline-offset<br><br>
+        tup- -- text-underline-position<br><br>
+        hyp- -- hyphens<br><br>
+        iso- -- isolation<br><br>
+        mbm- -- mix-blend-mode<br><br>
+        of- -- object-fit<br><br>
+        op- -- object-position<br><br>
+        oa- -- offset-anchor<br><br>
+        od- -- offset-distance<br><br>
+        opath- -- offset-path<br><br>
+        orot- -- offset-rotate<br><br>
+        ob- -- overscroll-behavior<br><br>
+        pba- -- page-break-after<br><br>
+        pbb- -- page-break-before<br><br>
+        pbi- -- page-break-inside<br><br>
+        quot- -- quotes<br><br>
+        ra- -- ruby-align<br><br>
+        rp- -- ruby-position<br><br>
+        sit- -- shape-image-threshold<br><br>
+        sm- -- shape-margin<br><br>
+        so- -- shape-outside<br><br>
+        tsize- -- tab-size<br><br>
+        tcu- -- text-combine-upright<br><br>
+        tem- -- text-emphasis<br><br>
+        tec- -- text-emphasis-color<br><br>
+        tep- -- text-emphasis-position<br><br>
+        tes- -- text-emphasis-style<br><br>
+        tren- -- text-rendering<br><br>
+        tsa- -- text-size-adjust<br><br>
+        ur- -- unicode-range<br><br>
+        va- -- vertical-align<br><br>
+        wb- -- word-break<br><br>
+        clip-p- -- clip-path<br><br>
+        maski- -- mask-image<br><br>
+        maskm- -- mask-mode<br><br>
+        maskr- -- mask-repeat<br><br>
+        maskpos- -- mask-position<br><br>
+        masks- -- mask-size<br><br>
+        masko- -- mask-origin<br><br>
+        maskcl- -- mask-clip<br><br>
+        maskcomp- -- mask-composite<br><br>
+        maskb- -- mask-border<br><br>
+        filt- -- filter<br><br>
 </div>
 </div>
 <footer class="">
